# Spatial-Genomics-3D-Chromatin

./: pyproject.toml
spatial_chrom3d/: cli.py
spatial_chrom3d/analysis/: topology.py
spatial_chrom3d/core/: data_structures.py
spatial_chrom3d/io/: loaders.py
spatial_chrom3d/processing/: __init__.py  contact_matrix.py
spatial_chrom3d/utils/: __init__.py  converters.py  helpers.py  validators.py
spatial_chrom3d/vis/: __init__.py  interactive.py  plots.py
tests/: test_core.py  test_io.py  test_processing.py
