[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-chrom3d"
version = "0.1.0"
description = "Advanced toolkit for spatial genomics and 3D chromatin analysis"
authors = [{name = "Atticus Colwell"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["genomics", "spatial", "chromatin", "3d", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "cooler>=0.8.0",
    "h5py>=3.0.0",
    "scanpy>=1.8.0",
    "networkx>=2.6.0",
    "numba>=0.56.0",
    "tqdm>=4.60.0",
    "click>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0"
]
